index.html updated

--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
     <title>DBDA-SHASHANK</title>
 </head>
 <body>
+    <h2>Hola amigos!</h2>
     Site under construction!!!
+    <br>
     stay tuned...
+    <br>
+    This site has been hosted on render.com
 </body>
 </html>
