added courses file

--- a/index.html
+++ b/index.html
@@ -12,5 +12,7 @@
     stay tuned...
     <br>
     This site has been hosted on render.com
+
+    <a href="./courses.html">Courses</a>
 </body>
 </html>
