--- a/courses.html
+++ b/courses.html
@@ -11,6 +11,8 @@
         <li>DBDA</li>
         <li>DITISS</li>
         <li>DMC</li>
+        <li>DAC</li>
     </ul>
+    updated courses
 </body>
 </html>
