--- a/courses.html
+++ b/courses.html
@@ -12,6 +12,7 @@
         <li>DITISS</li>
         <li>DMC</li>
         <li>DAC</li>
+        <li>DESD</li>
     </ul>
     updated courses
 </body>
